Add gradle configuration for running application